TestRepo2/src/objects/Diageo_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Allowed_Recipe_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allowed Recipe Brand</label>
        <referenceTo>Diageo_Brand__c</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Featured_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Featured Brand</label>
        <referenceTo>Diageo_Brand__c</referenceTo>
        <relationshipLabel>Diageo Assets (Featured Brand)</relationshipLabel>
        <relationshipName>Diageo_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Diageo Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diageo Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name)==0</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You must specify a name for this asset</errorMessage>
    </validationRules>
</CustomObject>